--- a/index.html
+++ b/index.html
@@ -4,11 +4,138 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Explore Ancient Egypt</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
+  <style>
+    /* Global Styles */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Cinzel', serif;
+      line-height: 1.6;
+      color: #333;
+      background-color: #f6f1e7;
+    }
+
+    /* Hero Section */
+    .hero {
+      position: relative;
+      height: 100vh;
+      background: url('https://upload.wikimedia.org/wikipedia/commons/e/e3/Kheops-Pyramid.jpg') center/cover no-repeat;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
+
+    .overlay {
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background-color: rgba(0, 0, 0, 0.5);
+    }
+
+    .hero .content {
+      position: relative;
+      z-index: 1;
+      color: #fff;
+      animation: fadeIn 2s ease-in-out;
+    }
+
+    .hero h1 {
+      font-size: 4rem;
+      margin-bottom: 1rem;
+    }
+
+    .hero p {
+      font-size: 1.2rem;
+      margin-bottom: 2rem;
+    }
+
+    .btn {
+      background-color: #e6b800;
+      color: #000;
+      padding: 0.75rem 1.5rem;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 8px;
+      transition: background 0.3s;
+    }
+
+    .btn:hover {
+      background-color: #ffd700;
+    }
+
+    /* Sections */
+    .section {
+      padding: 5rem 2rem;
+      max-width: 900px;
+      margin: auto;
+    }
+
+    .section.dark {
+      background-color: #d4af37;
+      color: #fff;
+    }
+
+    .cards {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1.5rem;
+      justify-content: center;
+      margin-top: 2rem;
+    }
+
+    .card {
+      background-color: rgba(255, 255, 255, 0.9);
+      padding: 1.5rem;
+      border-radius: 10px;
+      width: 250px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      transition: transform 0.3s;
+    }
+
+    .card:hover {
+      transform: translateY(-10px);
+    }
+
+    footer {
+      text-align: center;
+      padding: 2rem;
+      background-color: #222;
+      color: #fff;
+    }
+
+    /* Animations */
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(-20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    /* Responsive Styles */
+    @media (max-width: 768px) {
+      .hero h1 {
+        font-size: 2.5rem;
+      }
+
+      .cards {
+        flex-direction: column;
+        align-items: center;
+      }
+    }
+
+  </style>
 </head>
 <body>
 
+  <!-- Hero Section -->
   <header class="hero">
     <div class="overlay"></div>
     <div class="content">
@@ -18,11 +145,13 @@
     </div>
   </header>
 
+  <!-- History Section -->
   <section id="history" class="section">
     <h2>The History</h2>
     <p>Ancient Egypt was a civilization of ancient North Africa, concentrated along the lower reaches of the Nile River. Known for its pharaohs, hieroglyphs, and monumental architecture like the pyramids and temples.</p>
   </section>
 
+  <!-- Gods Section -->
   <section id="gods" class="section dark">
     <h2>Gods & Mythology</h2>
     <div class="cards">
@@ -41,11 +170,13 @@
     </div>
   </section>
 
+  <!-- Architecture Section -->
   <section id="architecture" class="section">
     <h2>Majestic Architecture</h2>
     <p>From the Great Pyramids of Giza to the temples of Karnak and Abu Simbel, Egyptian architecture reflects grandeur, precision, and divine alignment.</p>
   </section>
 
+  <!-- Footer -->
   <footer>
     <p>🌍 Made with ❤️ for the wonders of Egypt</p>
   </footer>
